# cargo-schnee

./: .gitignore  Cargo.toml  README.md  flake.nix  treefmt.nix
.github/workflows/: ci.yml
bench/: .gitignore  flake.nix
bench/nix/: build-rust-package.nix  cargo-schnee.nix  cargo2nix.nix  crane.nix  just-source.nix  vm.nix
bench/tools/: Cargo.toml
bench/tools/src/: generate_markdown.rs  inline_readme.rs  main.rs  parse_profiles.rs
examples/build-package/: Cargo.toml  flake.nix
examples/build-package-cross/: Cargo.toml  flake.nix
examples/build-package-cross-windows/: Cargo.toml  flake.nix
examples/build-package-cross-windows/src/: main.rs
examples/build-package-cross/src/: main.rs
examples/cross/: Cargo.toml  flake.nix
examples/cross-windows/: Cargo.toml  flake.nix
examples/cross-windows/src/: main.rs
examples/simple/: .envrc  Cargo.toml  flake.nix
examples/simple/src/: main.rs
nix/: buildDoc.nix  buildPackage.nix  buildPackagePure.nix  clippyPackage.nix  makeCargoWrapper.nix  testPackage.nix  testPackagePure.nix  unitGraph.nix
src/: diagnostics.rs  main.rs  nar.rs  nix_encoding.rs  plan.rs  shell.rs
src/plan_nix/: aterm.rs  daemon.rs  derivation.rs  derivation_format.rs  mod.rs  unit_graph.rs  util.rs
tests/: integration.rs
tests/fixtures/build-script-copy/: Cargo.toml  build.rs
tests/fixtures/build-script-home/: Cargo.toml  build.rs
tests/fixtures/cross-bs-host-target/: Cargo.toml
tests/fixtures/cross-bs-link-search/: Cargo.toml
tests/fixtures/dev-dep-cycle/lib-lower/: Cargo.toml
tests/fixtures/dev-dep-cycle/lib-lower/src/: lib.rs
tests/fixtures/dev-dep-cycle/lib-lower/tests/: roundtrip.rs
(+78 files in other folders)
