[package]
name = "cargo-schnee"
version = "0.1.0"
edition = "2024"
description = "Nix-native Cargo executor: replace dirty detection with Nix derivations"
license = "Apache-2.0"
repository = "https://github.com/poly2it/cargo-schnee"
keywords = ["nix", "cargo", "build-system", "derivation"]
categories = ["development-tools::build-utils"]

[dependencies]
# cargo as a library - latest version
cargo = "0.95"
cargo-platform = "0.3"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
git2 = "0.20"
signal-hook = "0.3"
fs2 = "0.4"

[dev-dependencies]
proptest = "1"

[workspace]
exclude = ["tests/fixtures/*", "examples/simple", "examples/cross", "examples/build-package", "examples/build-package-cross"]
